--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "pinyin-pro": "^3.28.0",
     "vue": "^3.5.24",
     "vue-i18n": "^11.2.8"
   },
