--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "pinyin-pro": "^3.28.0",
     "vue": "^3.5.24",
-    "vue-i18n": "^11.2.8"
+    "vue-i18n": "^11.2.8",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@types/node": "^24.10.9",
