--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "js-cookie": "^3.0.5",
     "pinia": "^3.0.4",
     "pinyin-pro": "^3.28.0",
+    "tailwindcss": "^4.1.18",
     "vue": "^3.5.24",
     "vue-i18n": "^11.2.8",
     "vuedraggable": "^4.1.0"
